k8s/overlays/test/patches/init-container-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghanawaters-api
spec:
  template:
    spec:
      initContainers:
      - name: wait-for-migrations
        env:
        - name: NODE_ENV
          value: "test"
