k8s/overlays/test/patches/node-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapper-api
spec:
  template:
    spec:
      containers:
      - name: snapper-api
        env:
        - name: NODE_ENV
          value: "test"
